--- a/README
+++ b/README
@@ -22,3 +22,7 @@ Information the database needs to collect:
 Number of times the code has been requested by ID
 
 If the system doesn't know the person requesting the code it should DM Adam's twitter handle and ask if it should add the person as a Tenant, Partner, ignore or give the code one time.
+
+
+
+Not related to the above, Jim wants me to make a change... this is my change...
