--- a/README
+++ b/README
@@ -26,3 +26,5 @@ If the system doesn't know the person requesting the code it should DM Adam's tw
 
 
 Not related to the above, Jim wants me to make a change... this is my change...
+
+3rd string of edits... without help this time!
